<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/app_preview"
        android:layout_width="0dp"
        android:layout_height="800dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/rounded_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablayout">

        <Button
            android:id="@+id/install_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="724dp"
            android:shadowColor="@color/white"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="0"
            android:text="@string/install"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="714dp"
            android:contentDescription="@string/youtube"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mmt" />

        <TextView
            android:id="@+id/app_preview_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="734dp"
            android:fontFamily="@font/alata"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/install_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/app_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/installed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="695dp"
            android:text="@string/installed"
            android:textColor="#8BC34A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/install_button"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/youtube_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/youtube"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="0dp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/music_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/youtube_music"
            tools:layout_editor_absoluteX="274dp"
            tools:layout_editor_absoluteY="0dp" />
    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>